--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v2
         with:
-          github_user_name:ellenzinhayks ${{ github.repository_owner }}
+          github_user_name:ellenzinhayks
           outputs: dist/snake.svg
 
 
